NDS-469 Fix button overflowing out of container issue for screen size above 600px

--- a/components/nds-action-banner/scss/action-banner.scss
+++ b/components/nds-action-banner/scss/action-banner.scss
@@ -58,6 +58,8 @@
     max-width: 100%;
     .btn {
       margin: 0;
+      white-space: normal;
+      word-break: break-word;
     }
   }
 
